--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,9 +32,13 @@ jobs:
 
       - name: No Jekyll
         run: |
-          echo "hi" > ./.nojekyll
           git config --global user.name Naomi Carrigan
           git config --global user.email nhcarrigan@gmail.com
+          git checkout -b gh-pages
+          git fetch origin
+          git reset --hard origin/gh-pages
+          echo $'/dist/\n/node_modules/' > ./.gitignore
+          echo "hi" > ./.nojekyll
           git add .
           git commit -m "chore: ignore jekyll"
-          git push
+          git push -u origin gh-pages
