--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "prebuild": "node loadPostList.js",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "lint": "ng lint",
+    "lint": "ng lint && prettier src --check",
     "test": "ng test --no-watch --no-progress --browsers=ChromeHeadlessCI",
     "deploy": "ng deploy"
   },
@@ -33,16 +33,11 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "17.0.6",
-    "@angular-eslint/builder": "17.1.1",
-    "@angular-eslint/eslint-plugin": "17.1.1",
-    "@angular-eslint/eslint-plugin-template": "17.1.1",
-    "@angular-eslint/schematics": "17.1.1",
-    "@angular-eslint/template-parser": "17.1.1",
     "@angular/cli": "17.0.6",
     "@angular/compiler-cli": "17.0.6",
+    "@nhcarrigan/eslint-config-angular": "1.0.1",
+    "@nhcarrigan/prettier-config": "3.2.0",
     "@types/jasmine": "5.1.4",
-    "@typescript-eslint/eslint-plugin": "6.13.2",
-    "@typescript-eslint/parser": "6.13.2",
     "angular-cli-ghpages": "1.0.7",
     "eslint": "8.55.0",
     "jasmine-core": "5.1.0",
@@ -51,6 +46,7 @@
     "karma-coverage": "2.2.1",
     "karma-jasmine": "5.1.0",
     "karma-jasmine-html-reporter": "2.1.0",
+    "prettier": "3.1.1",
     "typescript": "5.2.2"
   }
 }
