Add a rule about the import resolution
Co-authored-by: Naomi Carrigan <nhcarrigan@gmail.com>

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,7 @@
 {
-  "extends": "@nhcarrigan/eslint-config-angular"
+  "extends": "@nhcarrigan/eslint-config-angular",
+  "rules": {
+    // TODO: Remove once the package is updated.
+    "import/no-unresolved": "off"
+  }
 }
