--- a/renovate.json
+++ b/renovate.json
@@ -1,6 +1,5 @@
 {
-  "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
-    "local>naomi-lgbt/renovate-config"
+    "github>naomi-lgbt/renovate-config"
   ]
 }
